--- a/travel_app/templates/add_respond.html
+++ b/travel_app/templates/add_respond.html
@@ -6,7 +6,7 @@
 
 		<div class="row">
 		
-			<div class="col-xs-3 col-xs-offset-1">
+			<div class="col-xs-3 col-xs-offset-1 respond_position">
 
 				<form action="{% url 'add_respond' %}" method="post"
 						enctype="multipart/form-data"
