--- a/travel_app/templates/to_join_the_trip.html
+++ b/travel_app/templates/to_join_the_trip.html
@@ -9,13 +9,13 @@
 			{% for entry in cur_trip %}
 				<h4 class="respond_title text-right">{{ entry.trip_point }}</h4>
 				<hr>
-				<p class="p_trip_info text-right">{{ entry.trip_description }}</p>
-				<p class="p_trip_info text-right">Виїзд - {{ entry.departure_date }}</p>
-				<p class="p_trip_info text-right">Повернення - {{ entry.date_of_arrival }}</p>
-				<p class="p_trip_info text-right">Можлива кількість місць - {{ entry.number_of_seats }}</p>
-				<p class="p_trip_info text-right" id="seats_info_p">Вільних місць - {{ seats_info }}</p>
+				<p class=" text-right">{{ entry.trip_description }}</p>
+				<p class=" text-right">Виїзд - {{ entry.departure_date }}</p>
+				<p class=" text-right">Повернення - {{ entry.date_of_arrival }}</p>
+				<p class="text-right">Можлива кількість місць - {{ entry.number_of_seats }}</p>
+				<p class="text-right" id="seats_info_p">Вільних місць - {{ seats_info }}</p>
 				<input id="seats_info_input" type="hidden" value="{{ seats_info }}">
-				<p class="p_trip_info text-right">Організовує поїздку - <a href="{% url 'profile' %}" class="a">{{ entry.trip_organizer }}</a></p>
+				<p class="text-right">Організовує поїздку - <a href="{% url 'profile' %}" class="a">{{ entry.trip_organizer }}</a></p>
 			{% endfor %}
 		</div>
 
@@ -29,25 +29,33 @@
 		</div>
 
 		<div class="col-xs-4">
-		<hr class="hr">
+			<hr class="hr">
+			
+			{% if tourist_list %}
 
-			<div class="trip_info">
+				<h4 class="respond_title">Учасники поїздки: <hr></h4>
+					
+				<div class="member_list">
+					{% for entry in tourist_list %}
 
-				{% if tourist_list %}
-					<h4 class="respond_title">Учасники поїздки:</h4><hr>
-						{% for entry in tourist_list %}
-							<p class="text-left">{{ entry.first_name }} {{ entry.last_name }}</p>
-							<p class="text-left">{{ entry.mail }}</p>
+						<div class="trip_info">
+							<p class="member_item text-left">{{ entry.first_name }} {{ entry.last_name }} |  
+								<a href="{% url 'profile' %}" class="a">
+									{{ entry.mail }}
+								</a>
+								</p>
 							<input type="hidden" value="{{ entry.first_name }}">
-							<hr>
-						{% endfor %}
-				
-				{% else %}
-					<p class="respond_title text-left">Ще ніхто не записувався!</p>
-				{% endif %}
+						</div>
 
-			</div>
+					{% endfor %}
+				</div>
 
+			{% else %}
+
+				<p class="respond_title text-left">Ще ніхто не записувався!</p>
+
+			{% endif %}
+	
 		</div>
 		
 
@@ -94,7 +102,7 @@
 					</div>
 
 
-					<div class="row r3">
+					<div class="row r">
 
 						<button name="send_button" id="send_button"
 								class="my_btn" type="submit">
