some cookie path, and button style on "add_photo" page was added

--- a/travel_app/templates/add_photo.html
+++ b/travel_app/templates/add_photo.html
@@ -27,8 +27,8 @@
 
 				<div class="row">	
 
-					<button class="btn btn-primary" name="send_button" type="submit">Зберегти до альбому</button>
-					<button class="btn btn-link" name="cancel_button" type="submit">Скасувати</button>
+					<button class="my_btn" name="send_button" type="submit">Зберегти до альбому</button>
+					<button class="my_btn_link" name="cancel_button" type="submit">Скасувати</button>
 
 				</div>	
 				
