--- a/travel_app/static/css/style.scss
+++ b/travel_app/static/css/style.scss
@@ -214,14 +214,16 @@ p{
 	position: relative;
 	left: 0;
 	top: 10px;
-	height: 340px;
+	height: 800px;/*340px;*/
 	z-index: 97;
 }
 
+/*
 #galery_button{
-	position: absolute;
+	position: relative;
 	top: 500px;
-}
+	float: center;
+}*/
 
 .albums_covers{
 	position: relative;
