--- a/travel_app/templates/home.html
+++ b/travel_app/templates/home.html
@@ -7,8 +7,8 @@
 		<div class="col-xs-9 " id="galery">
 		<hr class="hr">
 							
-			{% for album in ALBUMS %}
-		
+			<!-- {% for album in ALBUMS %}
+					
 				<div class="col-xs-3 albums_covers">
 					
 					<a href="{% url 'show_photo' %}"  title="{{album.title}}" >
@@ -22,19 +22,43 @@
 					<div class="album_info">
 						<p class="p_title">{{ album.title }}</p>					
 						<p class="p_author">{{ album.author }} -<span class="span_date"> {{ album.date }}</span></p>
-
+			
 					</div>
-
+			
 				</div>
+			
+			{% endfor %}  -->
+							
+			 {% for album in all_albums %}
+					
+				<div class="col-xs-3 albums_covers">
+					
+					<a href="{% url 'show_photo' %}"  title="{{album.travel_title}}" >
+						<div class="img_frame">
+							<img class=" album_img" src="{{ album.travel_cover.url }}" alt=""
+								height="150px" width="200px" />
+						</div>
+					</a>
+					<input type="hidden" value="{{ album.id }}" />
+					
+					<div class="album_info">
+						<p class="p_title">{{ album.travel_name }}</p>					
+						<p class="p_author">{{ album.travel_author }} -<span class="span_date"> {{ album.travel_created_on }}</span></p>
+			
+					</div>
+			
+				</div>
+			
+			{% endfor %} 
+			
+		</div>
 
-			{% endfor %}
 		
-		</div>
-	
-		<div class="col-xs-3 col-xs-offset-3 text-center" id="galery_button">
+	<!--  <div class="col-xs-3 col-xs-offset-3 text-center" id="galery_button">
 			<a class="btn-link a">Показати ще<hr class="hr"></a>
-		</div>
-
+		
+		</div>   -->
+	
 
 		<div class="col-xs-3" id="users_comments">
 		<hr class="hr">
@@ -59,6 +83,25 @@
 	</div>
 
 	<div class="row">
+		<div class="col-xs-8 col-xs-offset-3 text-center">
+			<div class="col-xs-2  text-center pagination"
+				id="prev_button">
+			
+				{% if all_albums.has_previous %}
+					<a href="?page={{ all_albums.previous_page_number }}" class="my_btn_link a">Попередня<hr class="hr"></a>
+				{% endif %}
+			
+			</div>
+
+			<div class="col-xs-2 text-center pagination"
+				id="next_button">
+
+				{% if all_albums.has_next %}
+					<a href="?page={{all_albums.next_page_number}}" class="my_btn_link a">Наступна<hr class="hr"></a>
+				{% endif %}
+			
+			</div>
+		</div>
 	</div>
 
 {% endblock content %}
