--- a/travel_app/templates/trip_list.html
+++ b/travel_app/templates/trip_list.html
@@ -20,7 +20,7 @@
 
 					<a href="{% url 'to_join_the_trip' %}" class="a">
 						<span class="respond_title">
-							{{ entry.point }}. 
+							<strong>{{ entry.point }}</strong>
 						</span>
 					</a>
 					<br>
