--- a/travel_app/templates/home.html
+++ b/travel_app/templates/home.html
@@ -53,7 +53,7 @@
 			
 		</div>
 
-		
+					
 	<!--  <div class="col-xs-3 col-xs-offset-3 text-center" id="galery_button">
 			<a class="btn-link a">Показати ще<hr class="hr"></a>
 		
@@ -83,12 +83,12 @@
 	</div>
 
 	<div class="row">
-		<div class="col-xs-8 col-xs-offset-3 text-center">
+		<div class="col-xs-8 col-xs-offset-3 text-center" id="galery_button">
 			<div class="col-xs-2  text-center pagination"
 				id="prev_button">
 			
 				{% if all_albums.has_previous %}
-					<a href="?page={{ all_albums.previous_page_number }}" class="my_btn_link a">Попередня<hr class="hr"></a>
+					<a href="?page={{ all_albums.previous_page_number }}" class="my_btn a">Попередня<hr class="hr"></a>
 				{% endif %}
 			
 			</div>
@@ -97,7 +97,7 @@
 				id="next_button">
 
 				{% if all_albums.has_next %}
-					<a href="?page={{all_albums.next_page_number}}" class="my_btn_link a">Наступна<hr class="hr"></a>
+					<a href="?page={{all_albums.next_page_number}}" class="my_btn a">Наступна<hr class="hr"></a>
 				{% endif %}
 			
 			</div>
